--- a/xp-overlay-injector.html
+++ b/xp-overlay-injector.html
@@ -51,10 +51,22 @@ A behavior used to add overlay injection capabilities on a web component.
 
             // Let
             let showed,
-                injected  = XP.isString(element) ? document.createElement(element.toLowerCase()) : element,
-                listener1 = event => this.firer(event) === injected && XP.call(injected, 'show'),
-                listener2 = XP.debounce(event => this.firer(event) === injected && !showed !== !event.detail.value && !event.detail.value ? Polymer.dom(Polymer.dom(injected).parentNode).removeChild(XP.unlisten(injected, 'xp-overlay', listener1) && XP.unlisten(injected, 'showed-changed', listener2)) : showed = event.detail.value, 500),
-                shell     = XP.matches(this, '.shell') ? this : XP.findParentElement(this, '.shell') || document.body;
+                remover  = XP.once(remove),
+                injected = XP.isString(element) ? document.createElement(element.toLowerCase()) : element,
+                shell    = XP.matches(this, '.shell') ? this : XP.findParentElement(this, '.shell') || document.body,
+                handler1 = event => this.firer(event) === injected && requestAnimationFrame(() => injected.show()),
+                handler2 = event => this.firer(event) === injected && showed && !event.detail.value ? this.wait(remover, 500) : showed = event.detail.value;
+
+            // Function
+            function remove() {
+
+                // Unlistening
+                XP.unlisten(injected, 'xp-overlay', handler1);
+                XP.unlisten(injected, 'showed-changed', handler2);
+
+                // Removing
+                Polymer.dom(Polymer.dom(injected).parentNode).removeChild(injected);
+            }
 
             // Ensuring
             if (injected) { this.ensure('target', this, injected); }
@@ -63,8 +75,8 @@ A behavior used to add overlay injection capabilities on a web component.
             if (callback) { this.ensure('callback', callback, injected); }
 
             // Listening
-            XP.listen(injected, 'xp-overlay', listener1);
-            XP.listen(injected, 'showed-changed', listener2);
+            XP.listen(injected, 'xp-overlay', handler1);
+            XP.listen(injected, 'showed-changed', handler2);
 
             // Appending
             Polymer.dom(shell.root || shell).appendChild(injected);
