--- a/xp-overlay-behavior.html
+++ b/xp-overlay-behavior.html
@@ -119,18 +119,6 @@ A behavior used to add overlaying capabilities on a web component.
             },
 
             /**
-             * If set to true, clicking outside will close the overlay.
-             *
-             * @attribute auto-hide
-             * @type boolean
-             * @default false
-             */
-            autoHide: {
-                type: Boolean,
-                value: false
-            },
-
-            /**
              * The overlay's callback.
              *
              * @attribute callback
@@ -255,16 +243,16 @@ A behavior used to add overlaying capabilities on a web component.
         // HANDLER
         __handleHide(event) {
 
-            // Frame 2
+            // Frame 1
             requestAnimationFrame(() => {
 
                 // Checking
-                if (event.overlays && event.overlays.indexOf(this) >= 0) { return; }
+                if (event.overlays && event.overlays.includes(this)) { return; }
 
                 // Setting
-                if ((!event.keyCode && !event.button && this.autoHide) || (event.keyCode === 27 && !event.defaultPrevented)) { event.hiding = this; }
+                if ((!event.keyCode && !event.button) || (event.keyCode === 27 && !event.defaultPrevented)) { event.hiding = this; }
 
-                // Frame 3
+                // Frame 2
                 requestAnimationFrame(() => {
 
                     // Checking
