--- a/xp-toast-behavior.html
+++ b/xp-toast-behavior.html
@@ -113,6 +113,7 @@ A behavior used to add toast capabilities on a web component.
                  *
                  * @attribute timeout
                  * @type number
+                 * @default 3000
                  */
                 timeout: {
                     type: Number,
