--- a/xp-tabs-behavior.html
+++ b/xp-tabs-behavior.html
@@ -118,6 +118,18 @@ A behavior used to add tabs capabilities on a web component.
         properties: {
 
             /**
+             * If set to true, the first item will be selected by default.
+             *
+             * @attribute auto-select
+             * @type boolean
+             * @default true
+             */
+            autoSelect: {
+                type: Boolean,
+                value: true
+            },
+
+            /**
              * The selector used to recognize items.
              *
              * @attribute item-selector
