--- a/xp-elements.html
+++ b/xp-elements.html
@@ -63,6 +63,7 @@ A collection of core web components from the expand.js team.
 <link rel="import" href="xp-menu-behavior.html">
 <link rel="import" href="xp-menu-styles.html">
 <link rel="import" href="xp-menu-wrapper.html">
+<link rel="import" href="xp-monitor.html">
 <link rel="import" href="xp-overlay-behavior.html">
 <link rel="import" href="xp-overlay-injector.html">
 <link rel="import" href="xp-overlay-styles.html">
