--- a/xp-base-behavior.html
+++ b/xp-base-behavior.html
@@ -448,7 +448,7 @@ A behavior used to improve Polymer Base API.
          *
          * @method _computeFrom
          * @param {*} value
-         * @return {*} value
+         * @returns {*} value
          * @private
          */
         _computeFrom(value) {
@@ -485,7 +485,7 @@ A behavior used to improve Polymer Base API.
          *
          * @method _isTruthy
          * @param {*} value
-         * @return {boolean}
+         * @returns {boolean}
          * @private
          */
         _isTruthy(value) {
