--- a/xp-input-behavior.html
+++ b/xp-input-behavior.html
@@ -347,13 +347,11 @@ A behavior used to add input capabilities on a web component.
              *
              * @attribute hidden
              * @type boolean
-             * @default false
              */
             hidden: {
                 observer: '__hiddenChanged',
                 reflectToAttribute: true,
-                type: Boolean,
-                value: false
+                type: Boolean
             },
 
             /**
