--- a/xp-input-checked-behavior.html
+++ b/xp-input-checked-behavior.html
@@ -137,8 +137,11 @@ A behavior used to add check input capabilities on a web component.
             // Casting
             this.checked = this._toValue(this.bindValue);
 
+            // Let
+            let memoized = XP.isDefined(this.get('memento.bindValue'));
+
             // Firing
-            this.fire('xp-input-change', {id: this.id, name: this.name, value: this.bindValue});
+            if (memoized) { this.async(() => this.fire('xp-input-change', {id: this.id, name: this.name, value: this.bindValue})); }
         },
 
         // OBSERVER
