--- a/xp-base-behavior.html
+++ b/xp-base-behavior.html
@@ -24,6 +24,10 @@ A behavior used to improve Polymer Base API.
 <link rel="import" href="../expandjs/expandjs.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPBaseBehavior
+     */
     Polymer.XPBaseBehavior = {
 
         /**
