--- a/xp-breadcrumb-behavior.html
+++ b/xp-breadcrumb-behavior.html
@@ -89,6 +89,9 @@ A behavior used to add breadcrumb capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPBreadcrumbBehavior
+     */
     Polymer.XPBreadcrumbBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPBreadcrumbBehaviorImp
