--- a/xp-list-behavior.html
+++ b/xp-list-behavior.html
@@ -117,6 +117,9 @@ A behavior used to add list capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPListBehavior
+     */
     Polymer.XPListBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPSelectorMultiBehavior,
