--- a/xp-page-behavior.html
+++ b/xp-page-behavior.html
@@ -245,6 +245,9 @@ A behavior used to add page capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPPageBehavior
+     */
     Polymer.XPPageBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPPageBehaviorImp
