--- a/xp-pages-behavior.html
+++ b/xp-pages-behavior.html
@@ -143,6 +143,9 @@ A behavior used to add pages capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPPagesBehavior
+     */
     Polymer.XPPagesBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPSelectorBehavior,
