--- a/xp-pressed-behavior.html
+++ b/xp-pressed-behavior.html
@@ -263,6 +263,9 @@ A behavior used to add press capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPPressedBehavior
+     */
     Polymer.XPPressedBehavior = [
         Polymer.XPFocusedBehavior,
         Polymer.XPTargeterBehavior,
