--- a/xp-wrapper-behavior.html
+++ b/xp-wrapper-behavior.html
@@ -86,6 +86,9 @@ A behavior used to add wrapping capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPWrapperBehavior
+     */
     Polymer.XPWrapperBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPWrapperBehaviorImp
