--- a/xp-anchor-behavior.html
+++ b/xp-anchor-behavior.html
@@ -135,6 +135,9 @@ A behavior used to add anchor capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPAnchorBehavior
+     */
     Polymer.XPAnchorBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPAnchorBehaviorImp
