--- a/xp-breadcrumb-step-behavior.html
+++ b/xp-breadcrumb-step-behavior.html
@@ -76,6 +76,9 @@ A behavior used to add breadcrumb step capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPBreadcrumbStepBehavior
+     */
     Polymer.XPBreadcrumbStepBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPBreadcrumbStepBehaviorImp
