--- a/xp-collapse-behavior.html
+++ b/xp-collapse-behavior.html
@@ -272,6 +272,9 @@ A behavior used to add collapse capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPCollapseBehavior
+     */
     Polymer.XPCollapseBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPCollapseBehaviorImp
