--- a/xp-dialog-behavior.html
+++ b/xp-dialog-behavior.html
@@ -185,6 +185,9 @@ A behavior used to add dialog capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPDialogBehavior
+     */
     Polymer.XPDialogBehavior = [
         Polymer.XPOverlayBehavior,
         Polymer.XPDialogBehaviorImp
