--- a/xp-finder-behavior.html
+++ b/xp-finder-behavior.html
@@ -290,6 +290,9 @@ A behavior used to add item finding capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPFinderBehavior
+     */
     Polymer.XPFinderBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPFinderBehaviorImp
