--- a/xp-focused-behavior.html
+++ b/xp-focused-behavior.html
@@ -147,6 +147,9 @@ A behavior used to add focus capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPFocusedBehavior
+     */
     Polymer.XPFocusedBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPFocusedBehaviorImp
