--- a/xp-icon-behavior.html
+++ b/xp-icon-behavior.html
@@ -205,6 +205,9 @@ A behavior used to add icon capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPIconBehavior
+     */
     Polymer.XPIconBehavior = [
         Polymer.XPIconsetFinder,
         Polymer.XPIconBehaviorImp
