--- a/xp-input-behavior.html
+++ b/xp-input-behavior.html
@@ -673,6 +673,9 @@ A behavior used to add input capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPInputBehavior
+     */
     Polymer.XPInputBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPInputBehaviorImp
