--- a/xp-input-checked-behavior.html
+++ b/xp-input-checked-behavior.html
@@ -177,6 +177,9 @@ A behavior used to add check input capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPInputCheckedBehavior
+     */
     Polymer.XPInputCheckedBehavior = [
         Polymer.XPInputBehavior,
         Polymer.XPInputCheckedBehaviorImp
