--- a/xp-input-value-behavior.html
+++ b/xp-input-value-behavior.html
@@ -256,6 +256,9 @@ A behavior used to add text input capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPInputValueBehavior
+     */
     Polymer.XPInputValueBehavior = [
         Polymer.XPInputBehavior,
         Polymer.XPInputValueBehaviorImp
