--- a/xp-label-behavior.html
+++ b/xp-label-behavior.html
@@ -142,6 +142,9 @@ A behavior used to improve label capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPLabelBehavior
+     */
     Polymer.XPLabelBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPLabelBehaviorImp
