--- a/xp-master-slave-behavior.html
+++ b/xp-master-slave-behavior.html
@@ -158,6 +158,9 @@ A behavior used to add master/slave capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPMasterSlaveBehavior
+     */
     Polymer.XPMasterSlaveBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPMasterSlaveBehaviorImp
