--- a/xp-menu-behavior.html
+++ b/xp-menu-behavior.html
@@ -157,6 +157,9 @@ A behavior used to add menu capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPMenuBehavior
+     */
     Polymer.XPMenuBehavior = [
         Polymer.XPFinderBehavior,
         Polymer.XPMasterSlaveBehavior,
