--- a/xp-meta-behavior.html
+++ b/xp-meta-behavior.html
@@ -75,6 +75,9 @@ A behavior used to add meta parsing capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPMetaBehavior
+     */
     Polymer.XPMetaBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPMetaBehaviorImp
