--- a/xp-overlay-behavior.html
+++ b/xp-overlay-behavior.html
@@ -285,6 +285,9 @@ A behavior used to add overlaying capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPOverlayBehavior
+     */
     Polymer.XPOverlayBehavior = [
         Polymer.XPTargeterBehavior,
         Polymer.XPOverlayBehaviorImp
