--- a/xp-progress-behavior.html
+++ b/xp-progress-behavior.html
@@ -331,6 +331,9 @@ A behavior used to add progress capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPProgressBehavior
+     */
     Polymer.XPProgressBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPProgressBehaviorImp
