--- a/xp-selector-behavior.html
+++ b/xp-selector-behavior.html
@@ -553,6 +553,9 @@ A behavior used to add selection capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPSelectorBehavior
+     */
     Polymer.XPSelectorBehavior = [
         Polymer.XPFinderBehavior,
         Polymer.XPTargeterBehavior,
