--- a/xp-selector-multi-behavior.html
+++ b/xp-selector-multi-behavior.html
@@ -70,6 +70,9 @@ A behavior used to add multi selection capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPSelectorMultiBehavior
+     */
     Polymer.XPSelectorMultiBehavior = [
         Polymer.XPSelectorBehavior,
         Polymer.XPSelectorMultiBehaviorImp
