--- a/xp-snackbar-behavior.html
+++ b/xp-snackbar-behavior.html
@@ -78,6 +78,9 @@ A behavior used to add snackbar capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPSnackbarBehavior
+     */
     Polymer.XPSnackbarBehavior = [
         Polymer.XPToastBehavior,
         Polymer.XPSnackbarBehaviorImp
