--- a/xp-sublist-behavior.html
+++ b/xp-sublist-behavior.html
@@ -209,6 +209,9 @@ A behavior used to add sublist capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPSublistBehavior
+     */
     Polymer.XPSublistBehavior = [
         Polymer.XPCollapseBehavior,
         Polymer.XPMasterSlaveBehavior,
