--- a/xp-submenu-behavior.html
+++ b/xp-submenu-behavior.html
@@ -136,6 +136,9 @@ A behavior used to add submenu capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPSubmenuBehavior
+     */
     Polymer.XPSubmenuBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPSubmenuBehaviorImp
