--- a/xp-tab-behavior.html
+++ b/xp-tab-behavior.html
@@ -157,6 +157,9 @@ A behavior used to add tab capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPTabBehavior
+     */
     Polymer.XPTabBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPTabBehaviorImp
