--- a/xp-tabs-behavior.html
+++ b/xp-tabs-behavior.html
@@ -315,6 +315,9 @@ A behavior used to add tabs capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPTabsBehavior
+     */
     Polymer.XPTabsBehavior = [
         Polymer.XPMasterSlaveBehavior,
         Polymer.XPSelectorBehavior,
