--- a/xp-targeter-behavior.html
+++ b/xp-targeter-behavior.html
@@ -67,6 +67,9 @@ A behavior used to add targeting capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPTargeterBehavior
+     */
     Polymer.XPTargeterBehavior = [
         Polymer.XPBaseBehavior,
         Polymer.XPTargeterBehaviorImp
