--- a/xp-toast-behavior.html
+++ b/xp-toast-behavior.html
@@ -122,6 +122,9 @@ A behavior used to add toast capabilities on a web component.
             }
         };
 
+        /**
+         * @polymerBehavior Polymer.XPToastBehavior
+         */
         Polymer.XPToastBehavior = [
             Polymer.XPOverlayBehavior,
             Polymer.XPToastBehaviorImp
