--- a/xp-tooltip-behavior.html
+++ b/xp-tooltip-behavior.html
@@ -170,6 +170,9 @@ A behavior used to add tooltip capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPTooltipBehavior
+     */
     Polymer.XPTooltipBehavior = [
         Polymer.XPTargeterBehavior,
         Polymer.XPTooltipBehaviorImp
