--- a/xp-finder-behavior.html
+++ b/xp-finder-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add item finding capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPFinderBehaviorImp
+     */
     Polymer.XPFinderBehaviorImp = {
 
         /**
