--- a/xp-icon-behavior.html
+++ b/xp-icon-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add icon capabilities on a web component.
 <link rel="import" href="xp-iconset-finder.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPIconBehaviorImp
+     */
     Polymer.XPIconBehaviorImp = {
 
         // CLASSES
