--- a/xp-iconset-finder.html
+++ b/xp-iconset-finder.html
@@ -27,6 +27,10 @@ A behavior used to add iconset finding capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPIconsetFinderImp
+     */
     Polymer.XPIconsetFinderImp = {
 
         /**
@@ -58,6 +62,9 @@ A behavior used to add iconset finding capabilities on a web component.
         icons: {}
     };
 
+    /**
+     * @polymerBehavior Polymer.XPIconsetFinder
+     */
     Polymer.XPIconsetFinder = [
         Polymer.XPBaseBehavior,
         Polymer.XPIconsetFinderImp
