--- a/xp-input-checked-behavior.html
+++ b/xp-input-checked-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add check input capabilities on a web component.
 <link rel="import" href="xp-input-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPInputCheckedBehaviorImp
+     */
     Polymer.XPInputCheckedBehaviorImp = {
 
         /**
