--- a/xp-label-behavior.html
+++ b/xp-label-behavior.html
@@ -27,6 +27,10 @@ A behavior used to improve label capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPLabelBehaviorImp
+     */
     Polymer.XPLabelBehaviorImp = {
 
         // CLASSES
