--- a/xp-list-behavior.html
+++ b/xp-list-behavior.html
@@ -28,6 +28,10 @@ A behavior used to add list capabilities on a web component.
 <link rel="import" href="xp-selector-multi-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPListBehaviorImp
+     */
     Polymer.XPListBehaviorImp = {
 
         // CLASSES
