--- a/xp-menu-behavior.html
+++ b/xp-menu-behavior.html
@@ -31,6 +31,10 @@ A behavior used to add menu capabilities on a web component.
 <link rel="import" href="xp-overlay-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPMenuBehaviorImp
+     */
     Polymer.XPMenuBehaviorImp = {
 
         // CLASSES
