--- a/xp-meta-behavior.html
+++ b/xp-meta-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add meta parsing capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPMetaBehaviorImp
+     */
     Polymer.XPMetaBehaviorImp = {
 
         // CLASSES
