--- a/xp-pressed-behavior.html
+++ b/xp-pressed-behavior.html
@@ -29,6 +29,10 @@ A behavior used to add press capabilities on a web component.
 <link rel="import" href="xp-targeter-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPPressedBehaviorImp
+     */
     Polymer.XPPressedBehaviorImp = {
 
         /**
