--- a/xp-progress-behavior.html
+++ b/xp-progress-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add progress capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPProgressBehaviorImp
+     */
     Polymer.XPProgressBehaviorImp = {
 
         // CLASSES
