--- a/xp-selector-multi-behavior.html
+++ b/xp-selector-multi-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add multi selection capabilities on a web component.
 <link rel="import" href="xp-selector-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPSelectorMultiBehaviorImp
+     */
     Polymer.XPSelectorMultiBehaviorImp = {
 
         // PROPERTIES
