--- a/xp-snackbar-behavior.html
+++ b/xp-snackbar-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add snackbar capabilities on a web component.
 <link rel="import" href="xp-toast-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPSnackbarBehaviorImp
+     */
     Polymer.XPSnackbarBehaviorImp = {
 
         // CLASSES
