--- a/xp-submenu-behavior.html
+++ b/xp-submenu-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add submenu capabilities on a web component.
 <link rel="import" href="xp-master-slave-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPSubmenuBehaviorImp
+     */
     Polymer.XPSubmenuBehaviorImp = {
 
         // CLASSES
