--- a/xp-tabs-behavior.html
+++ b/xp-tabs-behavior.html
@@ -29,6 +29,10 @@ A behavior used to add tabs capabilities on a web component.
 <link rel="import" href="xp-selector-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPTabsBehaviorImp
+     */
     Polymer.XPTabsBehaviorImp = {
 
         // CLASSES
