--- a/xp-toast-behavior.html
+++ b/xp-toast-behavior.html
@@ -32,7 +32,9 @@ A behavior used to add toast capabilities on a web component.
         // Let
         let queue = [];
 
-        // Prototype
+        /**
+         * @polymerBehavior Polymer.XPToastBehaviorImp
+         */
         Polymer.XPToastBehaviorImp = {
 
             // CLASSES
