--- a/xp-anchor-behavior.html
+++ b/xp-anchor-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add anchor capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPAnchorBehaviorImp
+     */
     Polymer.XPAnchorBehaviorImp = {
 
         /**
