--- a/xp-breadcrumb-behavior.html
+++ b/xp-breadcrumb-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add breadcrumb capabilities on a web component.
 <link rel="import" href="xp-master-slave-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPBreadcrumbBehaviorImp
+     */
     Polymer.XPBreadcrumbBehaviorImp = {
 
         // CLASSES
