--- a/xp-breadcrumb-step-behavior.html
+++ b/xp-breadcrumb-step-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add breadcrumb step capabilities on a web component.
 <link rel="import" href="xp-master-slave-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPBreadcrumbStepBehaviorImp
+     */
     Polymer.XPBreadcrumbStepBehaviorImp = {
 
         // CLASSES
