--- a/xp-collapse-behavior.html
+++ b/xp-collapse-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add collapse capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPCollapseBehaviorImp
+     */
     Polymer.XPCollapseBehaviorImp = {
 
         /**
