--- a/xp-dialog-behavior.html
+++ b/xp-dialog-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add dialog capabilities on a web component.
 <link rel="import" href="xp-overlay-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPDialogBehaviorImp
+     */
     Polymer.XPDialogBehaviorImp = {
 
         // CLASSES
