--- a/xp-dialog-wrapper.html
+++ b/xp-dialog-wrapper.html
@@ -27,12 +27,19 @@ A behavior used to add dialog wrapping capabilities on a web component.
 <link rel="import" href="xp-overlay-wrapper.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPDialogWrapperImp
+     */
     Polymer.XPDialogWrapperImp = {
 
         // CLASSES
         classes: ['dialog']
     };
 
+    /**
+     * @polymerBehavior Polymer.XPDialogWrapper
+     */
     Polymer.XPDialogWrapper = [
         Polymer.XPOverlayWrapper,
         Polymer.XPDialogWrapperImp
