--- a/xp-focused-behavior.html
+++ b/xp-focused-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add focus capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPFocusedBehaviorImp
+     */
     Polymer.XPFocusedBehaviorImp = {
 
         // LISTENERS
