--- a/xp-form-wrapper.html
+++ b/xp-form-wrapper.html
@@ -27,6 +27,10 @@ A behavior used to add form wrapping capabilities on a web component.
 <link rel="import" href="xp-wrapper-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPFormWrapperImp
+     */
     Polymer.XPFormWrapperImp = {
 
         /**
@@ -145,6 +149,9 @@ A behavior used to add form wrapping capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPFormWrapper
+     */
     Polymer.XPFormWrapper = [
         Polymer.XPWrapperBehavior,
         Polymer.XPFormWrapperImp
