--- a/xp-input-behavior.html
+++ b/xp-input-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add input capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPInputBehaviorImp
+     */
     Polymer.XPInputBehaviorImp = {
 
         // CLASSES
