--- a/xp-menu-wrapper.html
+++ b/xp-menu-wrapper.html
@@ -27,6 +27,10 @@ A behavior used to add menu wrapping capabilities on a web component.
 <link rel="import" href="xp-overlay-wrapper.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPMenuWrapperImp
+     */
     Polymer.XPMenuWrapperImp = {
 
         // CLASSES
@@ -61,6 +65,9 @@ A behavior used to add menu wrapping capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPMenuWrapper
+     */
     Polymer.XPMenuWrapper = [
         Polymer.XPOverlayWrapper,
         Polymer.XPMenuWrapperImp
