--- a/xp-overlay-behavior.html
+++ b/xp-overlay-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add overlaying capabilities on a web component.
 <link rel="import" href="xp-targeter-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPOverlayBehaviorImp
+     */
     Polymer.XPOverlayBehaviorImp = {
 
         // CLASSES
