--- a/xp-overlay-injector.html
+++ b/xp-overlay-injector.html
@@ -27,6 +27,10 @@ A behavior used to add overlay injection capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPOverlayInjectorImp
+     */
     Polymer.XPOverlayInjectorImp = {
 
         /**
@@ -86,6 +90,9 @@ A behavior used to add overlay injection capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPOverlayInjector
+     */
     Polymer.XPOverlayInjector = [
         Polymer.XPBaseBehavior,
         Polymer.XPOverlayInjectorImp
