--- a/xp-overlay-wrapper.html
+++ b/xp-overlay-wrapper.html
@@ -29,6 +29,10 @@ A behavior used to add overlay wrapping capabilities on a web component.
 <link rel="import" href="xp-wrapper-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPOverlayWrapperImp
+     */
     Polymer.XPOverlayWrapperImp = {
 
         // CLASSES
@@ -202,6 +206,9 @@ A behavior used to add overlay wrapping capabilities on a web component.
         }
     };
 
+    /**
+     * @polymerBehavior Polymer.XPOverlayWrapper
+     */
     Polymer.XPOverlayWrapper = [
         Polymer.XPTargeterBehavior,
         Polymer.XPWrapperBehavior,
