--- a/xp-page-behavior.html
+++ b/xp-page-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add page capabilities on a web component.
 <link rel="import" href="xp-master-slave-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPPageBehaviorImp
+     */
     Polymer.XPPageBehaviorImp = {
 
         // CLASSES
