--- a/xp-pages-behavior.html
+++ b/xp-pages-behavior.html
@@ -29,6 +29,10 @@ A behavior used to add pages capabilities on a web component.
 <link rel="import" href="xp-selector-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPPagesBehaviorImp
+     */
     Polymer.XPPagesBehaviorImp = {
 
         // CLASSES
