--- a/xp-selector-behavior.html
+++ b/xp-selector-behavior.html
@@ -29,6 +29,10 @@ A behavior used to add selection capabilities on a web component.
 <link rel="import" href="xp-targeter-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPSelectorBehaviorImp
+     */
     Polymer.XPSelectorBehaviorImp = {
 
         // CLASSES
