--- a/xp-sublist-behavior.html
+++ b/xp-sublist-behavior.html
@@ -29,6 +29,10 @@ A behavior used to add sublist capabilities on a web component.
 <link rel="import" href="xp-master-slave-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPSublistBehaviorImp
+     */
     Polymer.XPSublistBehaviorImp = {
 
         // CLASSES
