--- a/xp-targeter-behavior.html
+++ b/xp-targeter-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add targeting capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPTargeterBehaviorImp
+     */
     Polymer.XPTargeterBehaviorImp = {
 
         /**
