--- a/xp-tooltip-behavior.html
+++ b/xp-tooltip-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add tooltip capabilities on a web component.
 <link rel="import" href="xp-targeter-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPTooltipBehaviorImp
+     */
     Polymer.XPTooltipBehaviorImp = {
 
         // CLASSES
