--- a/xp-wrapper-behavior.html
+++ b/xp-wrapper-behavior.html
@@ -27,6 +27,10 @@ A behavior used to add wrapping capabilities on a web component.
 <link rel="import" href="xp-base-behavior.html">
 
 <script>
+
+    /**
+     * @polymerBehavior Polymer.XPWrapperBehaviorImp
+     */
     Polymer.XPWrapperBehaviorImp = {
 
         // PROPERTIES
