Few small fixes

--- a/xp-analytics.html
+++ b/xp-analytics.html
@@ -24,6 +24,7 @@ A web component used to load google analytics.
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../expandjs/expandjs.html">
+<link rel="import" href="xp-base-behavior.html">
 
 <dom-module id="xp-analytics">
 
