--- a/xp-animation.html
+++ b/xp-animation.html
@@ -30,7 +30,7 @@ It can be used in conjunction with [xp-animation-group](https://expandjs.com/com
 <link rel="import" href="xp-master-slave-behavior.html">
 <link rel="import" href="xp-targeter-behavior.html">
 
-<script src="../web-animations-js/web-animations-next.js"></script>
+<script src="../web-animations-js/web-animations-next.min.js"></script>
 
 <dom-module id="xp-animation">
 
