--- a/xp-collapse.html
+++ b/xp-collapse.html
@@ -24,8 +24,8 @@ A web component used to display a collapsible box.
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../expandjs/expandjs.html">
-<link rel="import" href="../xp-elements/xp-collapse-behavior.html">
-<link rel="import" href="../xp-elements/xp-collapse-styles.html">
+<link rel="import" href="xp-collapse-behavior.html">
+<link rel="import" href="xp-collapse-styles.html">
 
 <dom-module id="xp-collapse">
 
